feat: add originalName field to Category and Subcategory entities, update related DTOs and repositories for enhanced category handling

--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,12 @@
             <artifactId>mockito-junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.javamoney</groupId>
+            <artifactId>moneta</artifactId>
+            <version>1.4.2</version>
+            <type>pom</type>
+        </dependency>
     </dependencies>
 
     <build>
